# rag-with-docling

./: .gitignore  README.md  app.py  docling_exploration.ipynb  docling_spark.ipynb  pyproject.toml
ui/: __init__.py  app.py  models.py  services.py
