[project]
name = "docling-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling",
    "docling-core",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai",
    "loguru>=0.7.3",
    "matplotlib",
    "numpy",
    "openai",
    "pandas",
    "pdfplumber>=0.11.7",
    "pillow",
    "pymilvus[milvus-lite]",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "python-dotenv",
    "seaborn",
    "sentence-transformers",
    "streamlit>=1.51.0",
    "tqdm",
    "unstructured>=0.18.15",
]
